canary/based-on-weight/myexampleapp-canary-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myexampleapp-canary-ingress
  labels:
    kubernetes.io/object: ingress
    app: myexampleapp
    env: canary
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "5"
spec:
  ingressClassName: nginx
  rules:
  - host: myexampleapp.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myexampleapp-canary-service
            port:
              number: 80
